Created the swagger documentation for loggin out a user's account
