# app/Http/Controllers/Authentication/LogoutController.php
@@ -11,6 +11,35 @@ use App\Actions\Auth\LogoutUserAction;
 
 class LogoutController extends Controller
 {
+    /**
+     * @OA\Get(
+     ** path="/api/v1/user/logout",
+     *   tags={"User"},
+     *   summary="Logout A User Account",
+     *   operationId="userLogout",
+     *
+     *   @OA\Response(
+     *      response=200,
+     *       description="Success"
+     *   ),
+     *   @OA\Response(
+     *      response=401,
+     *       description="Unauthenticated"
+     *   ),
+     *   @OA\Response(
+     *      response=500,
+     *      description="Internal Server Error"
+     *   ),
+     *   @OA\Response(
+     *      response=404,
+     *      description="Page Not found"
+     *   ),
+     *   @OA\Response(
+     *      response=422,
+     *      description="Unprocessable Entity"
+     *   )
+     *)
+     **/
     public function __invoke(Request $request, LogoutUserAction $logoutUserAction)
     {
         try {
